{
  "version": 4,
  "terraform_version": "0.12.19",
  "serial": 79,
  "lineage": "53725380-842a-bc65-dd7c-2ff0f13ce967",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "django-webserver",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0987ee37af7792903",
            "arn": "arn:aws:ec2:eu-west-1:224154743240:instance/i-0ed0e19957e551c4f",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-0ed0e19957e551c4f",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "AS1-ssh-key",
            "monitoring": false,
            "primary_network_interface_id": "eni-0c3f7f192ebbf0fd8",
            "private_dns": "ip-10-0-2-81.eu-west-1.compute.internal",
            "private_ip": "10.0.2.81",
            "public_ip": "34.247.74.172",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 180,
                "volume_id": "vol-06aa156e17735863d",
                "volume_size": 60,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-071396dda28467619"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ddb2ab961db529d0",
            "tags": {
              "Name": "django-webserver",
              "sre_candidate": "Hussain Abbas"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-071396dda28467619"
            ]
          },
          "dependencies": [
            "aws_instance.jump-box",
            "aws_key_pair.AS1-ssh-key",
            "aws_security_group.django-web",
            "aws_security_group.jump-box",
            "random_shuffle.Public-Subnet-ID"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "jump-box",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0987ee37af7792903",
            "arn": "arn:aws:ec2:eu-west-1:224154743240:instance/i-0b354f1ea137fd8ca",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-0b354f1ea137fd8ca",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "AS1-ssh-key",
            "monitoring": false,
            "primary_network_interface_id": "eni-01b6aac8011c22676",
            "private_dns": "ip-10-0-2-6.eu-west-1.compute.internal",
            "private_ip": "10.0.2.6",
            "public_ip": "34.241.251.49",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 180,
                "volume_id": "vol-031848ef789f64a9b",
                "volume_size": 60,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0f7a686454491d0a2"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ddb2ab961db529d0",
            "tags": {
              "Name": "JumpBox",
              "sre_candidate": "Hussain Abbas"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0f7a686454491d0a2"
            ]
          },
          "dependencies": [
            "aws_key_pair.AS1-ssh-key",
            "aws_security_group.jump-box",
            "random_shuffle.Public-Subnet-ID"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0b361436e8db07760",
            "owner_id": "224154743240",
            "tags": {
              "sre_candidate": "Hussain Abbas"
            },
            "vpc_id": "vpc-0f0beb2522423b131"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main-public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-053b13e4acbd9b592",
            "owner_id": "224154743240",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b361436e8db07760",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "vpc_id": "vpc-0f0beb2522423b131"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04dc4b08f412b6658",
            "route_table_id": "rtb-053b13e4acbd9b592",
            "subnet_id": "subnet-020b51403b417acc3"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.main-public",
            "aws_subnet.Public-1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "b",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02d77ab17ba2455fd",
            "route_table_id": "rtb-053b13e4acbd9b592",
            "subnet_id": "subnet-0ddb2ab961db529d0"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.main-public",
            "aws_subnet.Public-2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "c",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05f282181024e90a3",
            "route_table_id": "rtb-053b13e4acbd9b592",
            "subnet_id": "subnet-05547d29c75710948"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.main-public",
            "aws_subnet.Public-3",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "RDS-sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:224154743240:security-group/sg-0b1f7ee3872581f09",
            "description": "Allow Mysql Connection",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b1f7ee3872581f09",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-071396dda28467619"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "RDS-sg",
            "name_prefix": null,
            "owner_id": "224154743240",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "RDS-sg",
              "sre_candidate": "Hussain Abbas"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f0beb2522423b131"
          },
          "dependencies": [
            "aws_security_group.django-web",
            "aws_security_group.jump-box",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "django-web",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:224154743240:security-group/sg-071396dda28467619",
            "description": "Allow HTTP \u0026 HTTPS",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-071396dda28467619",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-0f7a686454491d0a2"
                ],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "django-web",
            "name_prefix": null,
            "owner_id": "224154743240",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "django-web",
              "sre_candidate": "Hussain Abbas"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f0beb2522423b131"
          },
          "dependencies": [
            "aws_security_group.jump-box",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "jump-box",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:224154743240:security-group/sg-0f7a686454491d0a2",
            "description": "Allow SSH",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f7a686454491d0a2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "jump-box",
            "name_prefix": null,
            "owner_id": "224154743240",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "jump-box",
              "sre_candidate": "Hussain Abbas"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f0beb2522423b131"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Private-1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:224154743240:subnet/subnet-0e66a8cd64e1d4d06",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-0e66a8cd64e1d4d06",
            "map_public_ip_on_launch": false,
            "owner_id": "224154743240",
            "tags": {
              "Name": "Private-Subnet-1",
              "sre_candidate": "Hussain Abbas"
            },
            "vpc_id": "vpc-0f0beb2522423b131"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Private-2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:224154743240:subnet/subnet-0bc54947e29698989",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.5.0/24",
            "id": "subnet-0bc54947e29698989",
            "map_public_ip_on_launch": false,
            "owner_id": "224154743240",
            "tags": {
              "Name": "Private-Subnet-2",
              "sre_candidate": "Hussain Abbas"
            },
            "vpc_id": "vpc-0f0beb2522423b131"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Private-3",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:224154743240:subnet/subnet-0ed812c6e8615ef5c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.6.0/24",
            "id": "subnet-0ed812c6e8615ef5c",
            "map_public_ip_on_launch": false,
            "owner_id": "224154743240",
            "tags": {
              "Name": "Private-Subnet-3",
              "sre_candidate": "Hussain Abbas"
            },
            "vpc_id": "vpc-0f0beb2522423b131"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Public-1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:224154743240:subnet/subnet-020b51403b417acc3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-020b51403b417acc3",
            "map_public_ip_on_launch": true,
            "owner_id": "224154743240",
            "tags": {
              "Name": "Public-Subnet-1",
              "sre_candidate": "Hussain Abbas"
            },
            "vpc_id": "vpc-0f0beb2522423b131"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Public-2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:224154743240:subnet/subnet-0ddb2ab961db529d0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0ddb2ab961db529d0",
            "map_public_ip_on_launch": true,
            "owner_id": "224154743240",
            "tags": {
              "Name": "Public-Subnet-2",
              "sre_candidate": "Hussain Abbas"
            },
            "vpc_id": "vpc-0f0beb2522423b131"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Public-3",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:224154743240:subnet/subnet-05547d29c75710948",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-05547d29c75710948",
            "map_public_ip_on_launch": true,
            "owner_id": "224154743240",
            "tags": {
              "Name": "Public-Subnet-3",
              "sre_candidate": "Hussain Abbas"
            },
            "vpc_id": "vpc-0f0beb2522423b131"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:224154743240:vpc/vpc-0f0beb2522423b131",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0a7acb2b7d2801238",
            "default_route_table_id": "rtb-0ecc151716551a073",
            "default_security_group_id": "sg-0fc8e5bcc4170921f",
            "dhcp_options_id": "dopt-d8a4cabe",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0f0beb2522423b131",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0ecc151716551a073",
            "owner_id": "224154743240",
            "tags": {
              "sre_candidate": "Hussain Abbas"
            }
          }
        }
      ]
    }
  ]
}